# OmniTraffick

./: .coverage  .env.example  ARCHITECTURE.md  DEPLOYMENT.md  FINAL_STATUS.md  OmniTraffick_OpenClaw_Prompt.md  PROJECT_STATUS.md  pyproject.toml
frontend/: package.json
frontend/src/app/: layout.tsx
frontend/src/components/: meta-pixel.tsx  providers.tsx  rag-copilot.tsx
frontend/src/lib/: api.ts  websocket.ts
omnitraffick/: .coverage  .env.example.bak  ARCHITECTURE.md  README.md
omnitraffick/frontend/: package.json
omnitraffick/src/: config.py  database.py  main.py
omnitraffick/src/ai/: __init__.py
omnitraffick/src/api/: deps.py
omnitraffick/src/models/: __init__.py  brand.py  market.py
omnitraffick/src/orchestration/: __init__.py
omnitraffick/src/schemas/: __init__.py  channel.py  market.py
omnitraffick/src/services/: taxonomy_engine.py
omnitraffick/src/tracking/: __init__.py  capi.py
omnitraffick/src/workers/: __init__.py  tasks.py
omnitraffick/tests/: conftest.py  test_api_deploy.py  test_celery_tasks.py  test_qa_engine.py.bak  test_taxonomy_engine.py
src/: config.py  main.py
src/adserver/: __init__.py  cm360.py
src/ai/: rag_engine.py
src/api/v1/: brands.py  rag.py  (+4 more)
src/models/: campaign.py  channel.py  ticket.py
src/qa/: __init__.py  engine.py  engine.py.bak2  engine.py.bak3
src/schemas/: brand.py  campaign.py  ticket.py
src/tracking/: adobe_launch.py
src/websocket/: __init__.py  manager.py
src/workers/: celery_app.py  tasks.py
tests/: test_api_campaigns.py  test_api_markets.py  test_qa_engine.py  test_translators.py
(+19 files in other folders)
